[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2" }
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
clap = "4.5.57"
hf-hub = "0.4.3"
serde_json = "1.0.149"
tokenizers = "0.22.2"
