[package]
name = "llm-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
chrono = "0.4.43"
hf-hub = "0.4.3"
minijinja = { version = "2", features = ["loader"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokenizers = "0.22.2"
